--- a/css/navbar.css
+++ b/css/navbar.css
@@ -85,6 +85,7 @@ nav:hover>.navbar {
 }
 
 .nav-detail a {
+
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -92,8 +93,34 @@ nav:hover>.navbar {
   font-size: bold;
   margin-bottom: 1.719vw;
   padding-bottom: 0.2083vw;
-  border-bottom: 2px solid;
   color: #518568;
+  transition: background-position-x 0.5s linear;
+}
+
+.nav-detail a:hover {
+  background: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB2ZXJzaW9uPSIxLjEi%0D%0AIGlkPSJMYXllcl8xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhs%0D%0AaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4PSIwcHgiIHk9IjBweCIKCSB3aWR0%0D%0AaD0iMzkwcHgiIGhlaWdodD0iNTBweCIgdmlld0JveD0iMCAwIDM5MCA1MCIgZW5hYmxlLWJhY2tn%0D%0Acm91bmQ9Im5ldyAwIDAgMzkwIDUwIiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHBhdGggZmlsbD0i%0D%0Abm9uZSIgc3Ryb2tlPSIjZDk0ZjVjIiBzdHJva2Utd2lkdGg9IjEuNSIgc3Ryb2tlLW1pdGVybGlt%0D%0AaXQ9IjEwIiBkPSJNMCw0Ny41ODVjMCwwLDk3LjUsMCwxMzAsMAoJYzEzLjc1LDAsMjguNzQtMzgu%0D%0ANzc4LDQ2LjE2OC0xOS40MTZDMTkyLjY2OSw0Ni41LDI0My42MDMsNDcuNTg1LDI2MCw0Ny41ODVj%0D%0AMzEuODIxLDAsMTMwLDAsMTMwLDAiLz4KPC9zdmc+Cg==");
+
+
+  background-size: cover;
+  animation: line 1s;
+  background-position-x: 20vw;
+
+  color: #d94f5c;
+
+
+
+}
+
+
+
+@keyframes line {
+  0% {
+    background-position-x: 5vw;
+  }
+
+  100% {
+    background-position-x: 20vw;
+  }
 }
 
 .active {
