--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,7 +12,7 @@ nav {
 }
 
 .navbar {
-  color: #CEDBD9;
+  color: #ffffff;
   width: 100vw;
   display: flex;
   list-style: none;
@@ -27,6 +27,7 @@ nav {
   justify-content: flex-end;
   background-color: rgba(59, 117, 86, 0.6);
   transition: top 0.5s;
+
   /* visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.5s linear;
@@ -35,13 +36,16 @@ nav {
 
 .navbar li {
   font-weight: 900;
-  font-size: 1.72vw;
+  font-size: 1.2vw;
   width: 7.448vw;
   text-align: center;
   padding-top: 1.094vw;
   position: relative;
 }
 
+.nav-logo{
+  margin-left: -1300px;
+}
 
 
 nav:hover>.navbar {
@@ -58,7 +62,7 @@ nav:hover>.navbar {
   border-radius: 10px;
   border: rgba(59, 117, 86, 0.6) solid 2px;
   position: absolute;
-  top: -0.104vw;
+  top: 0.4vw;
   left: 0.26vw;
   width: calc(100% - 0.6vw);
   padding-top: 1.094vw;
@@ -80,6 +84,7 @@ nav:hover>.navbar {
 }
 
 .nav-detail-title {
+  margin-top: -0.5vw;
   padding-bottom: 3.23vw;
   color: #72A081;
 }
@@ -99,7 +104,6 @@ nav:hover>.navbar {
 
 .nav-detail a:hover {
   background: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB2ZXJzaW9uPSIxLjEi%0D%0AIGlkPSJMYXllcl8xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhs%0D%0AaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4PSIwcHgiIHk9IjBweCIKCSB3aWR0%0D%0AaD0iMzkwcHgiIGhlaWdodD0iNTBweCIgdmlld0JveD0iMCAwIDM5MCA1MCIgZW5hYmxlLWJhY2tn%0D%0Acm91bmQ9Im5ldyAwIDAgMzkwIDUwIiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHBhdGggZmlsbD0i%0D%0Abm9uZSIgc3Ryb2tlPSIjZDk0ZjVjIiBzdHJva2Utd2lkdGg9IjEuNSIgc3Ryb2tlLW1pdGVybGlt%0D%0AaXQ9IjEwIiBkPSJNMCw0Ny41ODVjMCwwLDk3LjUsMCwxMzAsMAoJYzEzLjc1LDAsMjguNzQtMzgu%0D%0ANzc4LDQ2LjE2OC0xOS40MTZDMTkyLjY2OSw0Ni41LDI0My42MDMsNDcuNTg1LDI2MCw0Ny41ODVj%0D%0AMzEuODIxLDAsMTMwLDAsMTMwLDAiLz4KPC9zdmc+Cg==");
-
 
   background-size: cover;
   animation: line 1s;
