--- a/scss/store.scss
+++ b/scss/store.scss
@@ -68,9 +68,10 @@ $goods-img: 'https://dummyimage.com/300x300';
 }
 
 
-// section
+// section 地圖
 .maps {
-    background-color: #4e5643;
+    background-color: rgba($color: #4e5643, $alpha: 0.7);
+    margin: 300px 0px;
 
     .container {
         padding-top: 1%;
@@ -85,6 +86,7 @@ $goods-img: 'https://dummyimage.com/300x300';
     }
 }
 
+// 帶伴手禮
 .omiyage .row:nth-child(2) {
     margin-right: 11%;
     margin-left: 11%;
@@ -138,6 +140,9 @@ $goods-img: 'https://dummyimage.com/300x300';
                 z-index: 1;
             }
 
+            h1{
+                font-size: 2rem;
+            }
             h2, h4 {
                 margin: 0;
             }
