--- a/scss/store.scss
+++ b/scss/store.scss
@@ -2,6 +2,14 @@ $title-img: '/img/store/title.png';
 $swiper-img: 'https://dummyimage.com/275x275';
 $goods-img: 'https://dummyimage.com/300x300';
 
+h1{
+    font-size: 2rem;
+}
+
+h3{
+    font-size: 1.5rem;
+}
+
 // swiperjs
 .swiper {
     width: 100%;
