--- a/css/store.css
+++ b/css/store.css
@@ -1,5 +1,13 @@
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,800);
+h1 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 .swiper {
   width: 100%;
   padding-top: 50px;
