--- a/scss/biking .scss
+++ b/scss/biking .scss
@@ -110,7 +110,7 @@ main{
             width: 400px;
             height: 300px;
             line-height: 200px;
-            background-image: url("/形象頁/img/banner點綴\ .png");
+            background-image: url("/img/biking/banner點綴\ .png");
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
@@ -282,7 +282,7 @@ main{
             z-index: -10;
             width: 10800px;
             height: 900px;
-            background-image:   url("/形象頁/img/bg-2.png");
+            background-image:   url("/img/biking/bg-2.png");
             background-size: contain  ;
             background-repeat: repeat-x;
         }
@@ -554,7 +554,7 @@ main{
             z-index: 4;
             width: calc(2240px / 8) ;
             height: 233px;
-            background-image: url("/形象頁/img/腳踏車V5.png");
+            background-image: url("/img/biking/腳踏車V5.png");
             transform: perspective(800px)  translate(0px,-60px);
             -webkit-box-reflect: below 1px linear-gradient(transparent 90%,#0004);
             animation: animateBiking 3s steps(8) infinite;
@@ -579,20 +579,20 @@ main{
             
         }
         .cloud-1{
-            background-image: url("/形象頁/img/cloud-01.png");
+            background-image: url("/img/biking/cloud-01.png");
             right: -700px;
         }
         .cloud-2{
-            background-image: url("/形象頁/img/cloud-14.png");
+            background-image: url("/img/biking/cloud-14.png");
             width: 800px;
             right: -200px;
         }
         .cloud-3{
-            background-image: url("/形象頁/img/cloud-03.png");
+            background-image: url("/img/biking/cloud-03.png");
             right: -1200px;
         }
         .cloud-3{
-            background-image: url("/形象頁/img/cloud-04.png");
+            background-image: url("/img/biking/cloud-04.png");
             top: 0px;
             right: -900px;
         }
@@ -607,45 +607,45 @@ main{
             background-repeat: no-repeat;
         }
         .tree-1{
-            background-image: url('/形象頁/img/treeQ-02.png');
+            background-image: url('/img/biking/treeQ-02.png');
         }
         .tree-2{
             height: 320px;
             width: 300px;
-            background-image: url('/形象頁/img/treeQ-10.png');
+            background-image: url('/img/biking/treeQ-10.png');
         }
         .tree-3{
             height: 350px;
-            background-image: url('/形象頁/img/treeQ-04.png');
+            background-image: url('/img/biking/treeQ-04.png');
         }
         .tree-4{
             height: 600px;
             width: 300px;
-            background-image: url('/形象頁/img/treeQ-08.png');
+            background-image: url('/img/biking/treeQ-08.png');
         }
         .tree-5{
             height: 330px;
             width: 250px;
-            background-image: url('/形象頁/img/treeQ-06.png');
+            background-image: url('/img/biking/treeQ-06.png');
         }
         .tree-6{
             height: 400px;
-            background-image: url('/形象頁/img/treeQ-07.png');
+            background-image: url('/img/biking/treeQ-07.png');
         }
         .tree-7{
             width: 187px;
             height: 384px;
-            background-image: url('/形象頁/img/treeQ-05.png');
+            background-image: url('/img/biking/treeQ-05.png');
         }
         
         .tree-8{
             height: 600px;
             width: 250px;
-            background-image: url('/形象頁/img/treeQ-09.png');
+            background-image: url('/img/biking/treeQ-09.png');
         }
         .tree-9{
             width: 250px;
-            background-image: url('/形象頁/img/treeQ-03.png');
+            background-image: url('/img/biking/treeQ-03.png');
         }
         
         @for $i from 1 through 9 {
@@ -665,41 +665,41 @@ main{
             background-size: contain;
         }
         .grass-1{
-            background-image: url("/形象頁/img/grass-02.png");
+            background-image: url("/img/biking/grass-02.png");
             right: 200px;
 
         }
         .grass-2{
             width: 200px;
-            background-image: url("/形象頁/img/grass-03.png");
+            background-image: url("/img/biking/grass-03.png");
             right: 0;
 
         }
         .grass-3{
             width: 300px;
-            background-image: url("/形象頁/img/grass-08.png");
+            background-image: url("/img/biking/grass-08.png");
             right: -1300px;
 
         }
         .grass-4{
             width: 400px;
-            background-image: url("/形象頁/img/grass-11.png");
+            background-image: url("/img/biking/grass-11.png");
             right: -1800px;
 
         }
         .grass-5{
             width: 300px;
-            background-image: url("/形象頁/img/grass-12.png");
+            background-image: url("/img/biking/grass-12.png");
             right: -1000px;
         }
         .grass-6{
             width: 300px;
-            background-image: url("/形象頁/img/grass-07.png");
+            background-image: url("/img/biking/grass-07.png");
             left: 0;
         }
         .grass-7{
             width: 300px;
-            background-image: url("/形象頁/img/grass-09.png");
+            background-image: url("/img/biking/grass-09.png");
             left: 500px;
         }
         @for $i from 1 through 5 {
@@ -721,11 +721,11 @@ main{
             background-size: contain;
         }
         .mountain-1{
-            background-image: url("/形象頁/img/mountain-04.png");
+            background-image: url("/img/biking/mountain-04.png");
             right: -2000px;
         }
         .mountain-2{
-            background-image: url("/形象頁/img/mountain-05.png");
+            background-image: url("/img/biking/mountain-05.png");
             right: -4800px;
         }
         .brige{
@@ -735,7 +735,7 @@ main{
             z-index: 7;
             width: 1640px;
             height: 1200px;
-            background-image: url("/形象頁/img/bridge-02.png");
+            background-image: url("/img/biking/bridge-02.png");
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -774,7 +774,7 @@ main{
                     height: 100px;
                     font-size: 2.1rem;
                     line-height: 120px;
-                    background-image: url("/形象頁/img/banner點綴\ .png");
+                    background-image: url("/img/biking/banner點綴\ .png");
                     background-position: center;
                     background-size: cover;
                     background-repeat: no-repeat;
@@ -791,7 +791,7 @@ main{
             top:20%;
             width: 80px;
             height: 108px;
-            background-image: url("/形象頁/img/地標-01.png");
+            background-image: url("/img/biking/地標-01.png");
             background-size: contain;
             background-repeat: no-repeat;
             // cursor: pointer;
@@ -821,20 +821,20 @@ main{
             background-repeat: no-repeat;
         }
         .building-1{
-            background-image: url("/形象頁/img/商店-02.png");
+            background-image: url("/img/biking/商店-02.png");
             right: -600px;
         }
         .building-3{
             width: 960px;
             height: 540px;
-            background-image: url("/形象頁/img/洞穴-01.png");
+            background-image: url("/img/biking/洞穴-01.png");
             right: -4200px;
             bottom: 80px;
         }
         .building-5{
             width: 720px;
             height: 405px;
-            background-image: url("/形象頁/img/馬-01.png");
+            background-image: url("/img/biking/馬-01.png");
             right: -8500px;
             bottom: 115px;
         }
@@ -844,7 +844,7 @@ main{
             bottom: -10%;
             width: 240px;
             height: 200px;
-            background-image: url("/形象頁/img/告示牌-03.png");
+            background-image: url("/img/biking/告示牌-03.png");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
