--- a/css/biking.css
+++ b/css/biking.css
@@ -23,7 +23,7 @@ main {
 main .skip-btn {
   position: fixed;
   top: 50vh;
-  right: 2vw;
+  right: 100px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   display: -webkit-box;
@@ -39,7 +39,7 @@ main .skip-btn {
   height: 80px;
   color: #fff;
   font-size: 30px;
-  border: 4px #fff solid;
+  border: 4px #242323 solid;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -669,8 +669,8 @@ main .veiw .camera .menu li a {
   height: 0px;
   color: transparent;
   border-radius: 50%;
-  -webkit-transform: rotate(calc(130deg * var(--i)));
-          transform: rotate(calc(130deg * var(--i)));
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -978,8 +978,8 @@ main .veiw .tree-9 {
 
 main .veiw .tree.tree-1 {
   right: -700px;
-  -webkit-transform: translateX(-4800px);
-          transform: translateX(-4800px);
+  -webkit-transform: translateX(-6400px);
+          transform: translateX(-6400px);
 }
 
 main .veiw .tree.tree-2 {
@@ -996,14 +996,14 @@ main .veiw .tree.tree-3 {
 
 main .veiw .tree.tree-4 {
   right: -2800px;
-  -webkit-transform: translateX(-22400px);
-          transform: translateX(-22400px);
+  -webkit-transform: translateX(-12800px);
+          transform: translateX(-12800px);
 }
 
 main .veiw .tree.tree-5 {
   right: -3500px;
-  -webkit-transform: translateX(-12000px);
-          transform: translateX(-12000px);
+  -webkit-transform: translateX(-36000px);
+          transform: translateX(-36000px);
 }
 
 main .veiw .tree.tree-6 {
@@ -1014,20 +1014,20 @@ main .veiw .tree.tree-6 {
 
 main .veiw .tree.tree-7 {
   right: -4900px;
-  -webkit-transform: translateX(-39200px);
-          transform: translateX(-39200px);
+  -webkit-transform: translateX(-44800px);
+          transform: translateX(-44800px);
 }
 
 main .veiw .tree.tree-8 {
   right: -5600px;
-  -webkit-transform: translateX(-57600px);
-          transform: translateX(-57600px);
+  -webkit-transform: translateX(-38400px);
+          transform: translateX(-38400px);
 }
 
 main .veiw .tree.tree-9 {
   right: -6300px;
-  -webkit-transform: translateX(-21600px);
-          transform: translateX(-21600px);
+  -webkit-transform: translateX(-64800px);
+          transform: translateX(-64800px);
 }
 
 main .veiw .grass {
@@ -1305,4 +1305,4 @@ main .veiw .km-6 {
 main .veiw.loaded {
   display: none;
 }
-/*# sourceMappingURL=biking .css.map */
+/*# sourceMappingURL=biking.css.map */
