--- a/css/bike.css
+++ b/css/bike.css
@@ -978,56 +978,56 @@ main .veiw .tree-9 {
 
 main .veiw .tree.tree-1 {
   right: -700px;
-  -webkit-transform: translateX(-6400px);
-          transform: translateX(-6400px);
-}
-
-main .veiw .tree.tree-2 {
-  right: -1400px;
-  -webkit-transform: translateX(-11200px);
-          transform: translateX(-11200px);
-}
-
-main .veiw .tree.tree-3 {
-  right: -2100px;
-  -webkit-transform: translateX(-12000px);
-          transform: translateX(-12000px);
-}
-
-main .veiw .tree.tree-4 {
-  right: -2800px;
-  -webkit-transform: translateX(-12800px);
-          transform: translateX(-12800px);
-}
-
-main .veiw .tree.tree-5 {
-  right: -3500px;
-  -webkit-transform: translateX(-36000px);
-          transform: translateX(-36000px);
-}
-
-main .veiw .tree.tree-6 {
-  right: -4200px;
   -webkit-transform: translateX(-4800px);
           transform: translateX(-4800px);
 }
 
+main .veiw .tree.tree-2 {
+  right: -1400px;
+  -webkit-transform: translateX(-14400px);
+          transform: translateX(-14400px);
+}
+
+main .veiw .tree.tree-3 {
+  right: -2100px;
+  -webkit-transform: translateX(-4800px);
+          transform: translateX(-4800px);
+}
+
+main .veiw .tree.tree-4 {
+  right: -2800px;
+  -webkit-transform: translateX(-19200px);
+          transform: translateX(-19200px);
+}
+
+main .veiw .tree.tree-5 {
+  right: -3500px;
+  -webkit-transform: translateX(-24000px);
+          transform: translateX(-24000px);
+}
+
+main .veiw .tree.tree-6 {
+  right: -4200px;
+  -webkit-transform: translateX(-33600px);
+          transform: translateX(-33600px);
+}
+
 main .veiw .tree.tree-7 {
   right: -4900px;
-  -webkit-transform: translateX(-44800px);
-          transform: translateX(-44800px);
+  -webkit-transform: translateX(-22400px);
+          transform: translateX(-22400px);
 }
 
 main .veiw .tree.tree-8 {
   right: -5600px;
-  -webkit-transform: translateX(-38400px);
-          transform: translateX(-38400px);
+  -webkit-transform: translateX(-51200px);
+          transform: translateX(-51200px);
 }
 
 main .veiw .tree.tree-9 {
   right: -6300px;
-  -webkit-transform: translateX(-64800px);
-          transform: translateX(-64800px);
+  -webkit-transform: translateX(-36000px);
+          transform: translateX(-36000px);
 }
 
 main .veiw .grass {
@@ -1305,4 +1305,4 @@ main .veiw .km-6 {
 main .veiw.loaded {
   display: none;
 }
-/*# sourceMappingURL=biking.css.map */
+/*# sourceMappingURL=bike.css.map */
