--- a/scss/bike.scss
+++ b/scss/bike.scss
@@ -65,7 +65,9 @@ $animDuration: 5s;
     box-sizing: border-box;
 }
 
-
+html{
+    scroll-behavior: smooth;
+}
 main{
     display: flex;
     justify-content: center;
@@ -249,29 +251,11 @@ main{
                 90% { transform: translateY(0); }
             }
             
-            @keyframes nudgeText {
-                0% { transform: translateY(0); }
-                20% { transform: translateY($posText); }
-                30% { transform: translateY(0); }
-                50% { transform: translateY($posText); }
-                60% { transform: translateY(0); }
-                80% { transform: translateY($posText); }
-                90% { transform: translateY(0); }
-            }
-            
-            @keyframes colorText { 
-                21% { color: $colorOutlineFade; }
-                30% { color: $colorOutline; }
-                51% { color: $colorOutlineFade; }
-                60% { color: $colorOutline; }
-                81% { color: $colorOutlineFade; }
-                90% { color: $colorOutline; }
-            }
             h3{
                 position: absolute;
-                bottom: 10%;
-                left: 130px;
-                color: #ccc;
+                bottom: 4%;
+                left: 150px;
+                color: #fff;
                 font-size: 35px;
                 font-weight: 900;
             }
@@ -281,7 +265,7 @@ main{
             left: 0;
             bottom: 50px;
             z-index: -10;
-            width: 10800px;
+            width: 12000px;
             height: 900px;
             background-image:   url("/img/biking/bg-2.png");
             background-size: contain  ;
