--- a/scss/bike.scss
+++ b/scss/bike.scss
@@ -698,20 +698,19 @@ main{
         }
         .mountain {
             position: absolute;
-            bottom: -35%;
             z-index: -2;
-            width: 1800px;
-            height: 1200px;
+            width: 700px;
+            height: 400px;
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
         }
         .mountain-1{
-            background-image: url("/img/biking/mountain-04.png");
-            right: -2000px;
+            background-image: url("/img/biking/street-01.png");
+            right: -1500px;
         }
         .mountain-2{
-            background-image: url("/img/biking/mountain-05.png");
+            background-image: url("/img/biking/street-02.png");
             right: -4800px;
         }
         .brige{
@@ -733,6 +732,7 @@ main{
             width: 0px;
             height: 0px;
             background-color: rgb(255, 255, 255);
+            opacity: 0.85;
             transition: .5s;
             font-size: 0px;
             background-size: cover;
@@ -746,19 +746,20 @@ main{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                padding:30px 20px;
+                padding:50px 50px 70px 50px;
                 z-index: 12;
                 transform: translateX(-50%);
-                width: 600px;
-                height: 500px;
-                border: 4px #fa0 solid;
+                width: 500px;
+                height: 400px;
+                border: 5px rgb(57, 95, 73) solid;
                 border-radius: 15px;
                 text-align: center;
                 color: #000;
                 .info-title{
                     width: 240px;
                     height: 100px;
-                    font-size: 2.1rem;
+                    margin-bottom: 2rem;
+                    font-size: 2rem;
                     line-height: 120px;
                     background-image: url("/img/biking/banner點綴\ .png");
                     background-position: center;
@@ -766,7 +767,7 @@ main{
                     background-repeat: no-repeat;
                 }
                 .info-description{
-                    
+                    font-size: 1.5rem;
                     color: #000;
                 }
             }
