--- a/scss/bike.scss
+++ b/scss/bike.scss
@@ -776,14 +776,15 @@ main{
             position: absolute;
             z-index: 8;
             top:20%;
-            width: 80px;
-            height: 108px;
+            width: 60px;
+            height: 90px;
             background-image: url("/img/biking/地標-01.png");
             background-size: contain;
             background-repeat: no-repeat;
             // cursor: pointer;
         }
         .marker-1{
+            top: 300px;
             right: -400px;
         }
         .marker-2{
@@ -840,6 +841,7 @@ main{
                 position: absolute;
                 left: 50%;
                 bottom: 150px;
+                color: #fff;
                 transform: translateX(-50%);
             }
         }
