--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,7 @@
           clip-path: ellipse(100% 100% at 50% -6%);
         }
 
-        .banner img{
+        .banner img {
           width: 100vw;
           opacity: 0.6;
           margin: -400px 0;
@@ -179,6 +179,7 @@
           width: 100%;
           background-color: transparent;
           height: 26.04vw;
+          justify-content: center;
         }
 
         .column:nth-child(1) {
@@ -211,11 +212,10 @@
         /* 左圖-1 */
 
         .gorgeousness-img.left {
-          width: 65%;
-          margin-left: 25%;
+          width: 32.5%;
           margin-right: 1%;
         }
-        
+
         .left-1 {
           background-image: url('/img/index/首頁方框用.png'), url('/img/index/25-news.ltn.com.tw-Larch-1.jpg');
         }
@@ -227,8 +227,7 @@
         /* 右圖 */
 
         .gorgeousness-img.right {
-          width: 65%;
-          margin-right: 25%;
+          width: 32.5%;
           margin-left: 1%;
         }
 
@@ -249,16 +248,15 @@
         /* 左圖文字 */
 
         .gorgeousness-text.left {
-          width: 55%;
-          margin-left: 30%;
+          width: 27.5%;
           margin-right: 5%;
         }
 
         /* 右圖文字 */
 
         .gorgeousness-text.right {
-          width: 55%;
-          margin-right: 30%;
+          width: 27.5%;
+
           margin-left: 5%;
         }
 
