形象頁-滾動才騎腳踏車

--- a/css/bike.css
+++ b/css/bike.css
@@ -761,8 +761,13 @@ main .veiw .bike {
   -webkit-transform: perspective(800px) translate(0px, -60px);
           transform: perspective(800px) translate(0px, -60px);
   -webkit-box-reflect: below 1px linear-gradient(transparent 90%, #0004);
-  -webkit-animation: animateBiking 3s steps(8) infinite;
-          animation: animateBiking 3s steps(8) infinite;
+  -webkit-animation: animateBiking 1s steps(8) infinite paused;
+          animation: animateBiking 1s steps(8) infinite paused;
+}
+
+main .veiw .bike.jump {
+  -webkit-animation: animateJump 0.5s ease-out;
+          animation: animateJump 0.5s ease-out;
 }
 
 @-webkit-keyframes animateBiking {
@@ -780,6 +785,52 @@ main .veiw .bike {
   }
   to {
     background-position: -2240px;
+  }
+}
+
+@-webkit-keyframes animateJump {
+  0% {
+    -webkit-transform: rotate(-15deg) translateY(-60px);
+            transform: rotate(-15deg) translateY(-60px);
+  }
+  25% {
+    -webkit-transform: rotate(-45deg) translateY(-100px);
+            transform: rotate(-45deg) translateY(-100px);
+  }
+  50% {
+    -webkit-transform: translateY(-200px);
+            transform: translateY(-200px);
+  }
+  75% {
+    -webkit-transform: rotate(15deg) translateY(-100px);
+            transform: rotate(15deg) translateY(-100px);
+  }
+  100% {
+    -webkit-transform: rotate(0deg) translateY(-60px);
+            transform: rotate(0deg) translateY(-60px);
+  }
+}
+
+@keyframes animateJump {
+  0% {
+    -webkit-transform: rotate(-15deg) translateY(-60px);
+            transform: rotate(-15deg) translateY(-60px);
+  }
+  25% {
+    -webkit-transform: rotate(-45deg) translateY(-100px);
+            transform: rotate(-45deg) translateY(-100px);
+  }
+  50% {
+    -webkit-transform: translateY(-200px);
+            transform: translateY(-200px);
+  }
+  75% {
+    -webkit-transform: rotate(15deg) translateY(-100px);
+            transform: rotate(15deg) translateY(-100px);
+  }
+  100% {
+    -webkit-transform: rotate(0deg) translateY(-60px);
+            transform: rotate(0deg) translateY(-60px);
   }
 }
 
@@ -878,56 +929,56 @@ main .veiw .tree-9 {
 
 main .veiw .tree.tree-1 {
   right: -700px;
-  -webkit-transform: translateX(-6400px);
-          transform: translateX(-6400px);
+  -webkit-transform: translateX(-7200px);
+          transform: translateX(-7200px);
 }
 
 main .veiw .tree.tree-2 {
   right: -1400px;
-  -webkit-transform: translateX(-14400px);
-          transform: translateX(-14400px);
-}
-
-main .veiw .tree.tree-3 {
-  right: -2100px;
-  -webkit-transform: translateX(-14400px);
-          transform: translateX(-14400px);
-}
-
-main .veiw .tree.tree-4 {
-  right: -2800px;
   -webkit-transform: translateX(-9600px);
           transform: translateX(-9600px);
 }
 
-main .veiw .tree.tree-5 {
-  right: -3500px;
-  -webkit-transform: translateX(-28000px);
-          transform: translateX(-28000px);
+main .veiw .tree.tree-3 {
+  right: -2100px;
+  -webkit-transform: translateX(-12000px);
+          transform: translateX(-12000px);
 }
 
-main .veiw .tree.tree-6 {
-  right: -4200px;
+main .veiw .tree.tree-4 {
+  right: -2800px;
   -webkit-transform: translateX(-19200px);
           transform: translateX(-19200px);
 }
 
+main .veiw .tree.tree-5 {
+  right: -3500px;
+  -webkit-transform: translateX(-12000px);
+          transform: translateX(-12000px);
+}
+
+main .veiw .tree.tree-6 {
+  right: -4200px;
+  -webkit-transform: translateX(-14400px);
+          transform: translateX(-14400px);
+}
+
 main .veiw .tree.tree-7 {
   right: -4900px;
-  -webkit-transform: translateX(-44800px);
-          transform: translateX(-44800px);
+  -webkit-transform: translateX(-11200px);
+          transform: translateX(-11200px);
 }
 
 main .veiw .tree.tree-8 {
   right: -5600px;
-  -webkit-transform: translateX(-51200px);
-          transform: translateX(-51200px);
+  -webkit-transform: translateX(-19200px);
+          transform: translateX(-19200px);
 }
 
 main .veiw .tree.tree-9 {
   right: -6300px;
-  -webkit-transform: translateX(-21600px);
-          transform: translateX(-21600px);
+  -webkit-transform: translateX(-43200px);
+          transform: translateX(-43200px);
 }
 
 main .veiw .grass {
