--- a/css/top.css
+++ b/css/top.css
@@ -1,3 +1,6 @@
+ *{
+   box-sizing: border-box;
+ }
  html {
    overflow-y: scroll;
  }
@@ -24,11 +27,11 @@
  #top .title {
    position: absolute;
    z-index: 2;
-   top: 0;
+   top: 20px;
    left: 0;
    width: 41.146vw;
    height: 3.646vw;
-   font-size: 3.333vw;
+   font-size: 2.5vw;
    font-weight: 900;
    margin-left: 19.0625vw;
    margin-top: 7.135vw;
@@ -49,7 +52,7 @@
    z-index: 1;
    top: 0;
    left: 0;
-   font-size: 1.719vw;
+   font-size: 1.5vw;
    margin-left: 32.969vw;
    margin-top: 12.24vw;
  }
