--- a/css/footer.css
+++ b/css/footer.css
@@ -9,7 +9,7 @@
  footer {
    width: 100vw;
    height: 22.55vw;
-   background-color: #231D1A;
+   background-color: #4e5643;
    position: absolute;
    margin-top: -9.427vw;
    z-index: -1;
